--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <h2 class="section-title">Przypomnijmy laureatów Spiel Des Jahres 2019</h2>
                 <article class="skill-left">
                     <div class="skill-image"> 
-                        <img src="http://cdn.shopify.com/s/files/1/1751/0407/products/B2zAbXf6TgmaTNhodeWj_wingspan4.jpg?v=1564704076" alt="Wingspan">
+                        <img src="https://planszostrefa.pl/userdata/gfx/29850/IMG_0195.jpg" alt="Wingspan">
                     </div>
                     
                     <div class="skill-description">
